[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Sword.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 60.778
height = 153.281

[node name="Sword" type="Area2D"]
position = Vector2( -2.81771, 1.17652 )
collision_layer = 16
collision_mask = 10
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.420929, -1.26277 )
scale = Vector2( 1.60332, 1.12628 )

[node name="AliveTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true
[connection signal="body_entered" from="." to="." method="_on_Sword_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="AliveTimer" to="." method="_on_AliveTimer_timeout"]
